# impulse

./: .gitignore  Cargo.toml  LICENSE  Xargo.toml
src/: lib.rs  main.rs
src/style/: dark.rs  mod.rs
src/widgets/: mod.rs  spectrogram.rs
