[package]
authors = ["Carter Reeb <reebcw@pm.me>"]
edition = "2018"
name = "impulse-editor"
version = "0.1.0"

[dependencies]
cpal = "0.13"
hound = "3.4"
iced = "0.3"
iced_graphics = "0.2"
iced_native = "0.4"

[dependencies.native-dialog]
features = ["windows_dpi_awareness", "windows_visual_styles"]
version = "0.5"

[dependencies.dasp]
features = ["all"]
version = "0.11"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
